# modified-files

./: .gitignore  Cargo.toml  README.md
examples/: find_origins.rs  map.rs
python/: analysis.ipynb  license-analysis.ipynb  license_classifier.py  swh-license-files.py  working_db.py
src/: env.rs  file_modified.rs  lib.rs  main.rs  models.rs  origin_grading.rs
