[package]
name = "altered-history-analysis"
version = "0.1.0"
edition = "2021"

[dependencies]
chashmap = "2.2.2"
csv = "1.3.1"
flexi_logger = "0.29.8"
indicatif = "0.17.11"
log = "0.4.26"
rayon = "1.10.0"
serde = { version = "1.0.218", features = ["derive"] }
swh-graph = "6.3.1"

sqlx = { version = "0.8.5", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.28", features = ["full"] }
anyhow = "1.0"
futures = "0.3"
deadpool-postgres = "0.10"
config = "0.13"
postgres = "0.19.10"
dotenv = "0.15.0"
regex = "1"
